--- a/App/Views/Admin/Dashboard/Course/index.html
+++ b/App/Views/Admin/Dashboard/Course/index.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} {% block title %}Admin | course{% endblock %} {%
 block body %}
+<a href="/admin/newCourse">
+    <button
+        class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
+        New
+    </button>
+</a>
 <div class="flex m-5">
     <div class="col-span-12">
         <div class="overflow-auto lg:overflow-visible">
@@ -34,24 +40,4 @@ block body %}
         </div>
     </div>
 </div>
-<h4>New course</h4>
-<form action="/admin/createCourse" method="post">
-    <div class="input-field">
-        <label for="name">Course Name</label>
-        <input type="text" id="name" name="name" />
-    </div>
-    <div class="input-field col s12">
-        Select course duration
-        <select name="duration" class="browser-default" id="hod">
-            {% for year in range(1,5) %}
-            <option value="{{year}}">{{year}}</option>
-            {% endfor %}
-        </select>
-        <br />
-    </div>
-    <button class="btn bg-orange lighten-1 z-depth-0">Create</button>
-</form>
-<br />
-<a href="/admin">Back to Admin Dashboard</a>
-
 {% endblock %}
