--- a/App/Views/Admin/Dashboard/Classes/index.html
+++ b/App/Views/Admin/Dashboard/Classes/index.html
@@ -5,38 +5,5 @@ body %}
     class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
     New
   </button></a>
-<div class="flex m-5">
-  <div class="col-span-12">
-    <div class="overflow-auto lg:overflow-visible">
-      <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
-        <thead class="bg-blue-900 text-white">
-          <tr>
-            <th class="p-3 lg:w-4 text-left">Serial no.</th>
-            <th class="p-3 text-center">Class Name</th>
-            <th class="p-3 text-center">Teacher Name</th>
-            <th class="p-3 text-left">Edit</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for class in classes%}
-          <tr class="bg-blue-100 lg:text-black">
-            <td class="p-3 font-medium capitalize">{{class.id}}</td>
-            <td class="p-3 text-center">{{class.name}}</td>
-            <td class="p-3 text-center">{{class.teacher}}</td>
-
-            <td class="p-3">
-              <a href="/admin/classes/{{class.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
-                <i class="material-icons-outlined text-base">edit</i>
-              </a>
-              <a href="/admin/deleteClasses/{{class.id}}" class="text-red-400 hover:text-red-500 ml-2">
-                <i class="material-icons-round text-base">delete_outline</i>
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+{% include "table.html" with{'columns':columns,'tableItems':classes,'type':'classes','delType':'deleteClasses'} %}
 {% endblock %}
