--- a/App/Views/Admin/Dashboard/Course/index.html
+++ b/App/Views/Admin/Dashboard/Course/index.html
@@ -6,38 +6,5 @@ block body %}
         New
     </button>
 </a>
-<div class="flex m-5">
-    <div class="col-span-12">
-        <div class="overflow-auto lg:overflow-visible">
-            <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
-                <thead class="bg-blue-900 text-white">
-                    <tr>
-                        <th class="p-3 lg:w-4 text-left">Serial no.</th>
-                        <th class="p-3 text-center">Course name</th>
-                        <th class="p-3 text-center">Duration</th>
-                        <th class="p-3 text-left">Edit</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for course in courses%}
-                    <tr class="bg-blue-100 lg:text-black">
-                        <td class="p-3 font-medium capitalize">{{course.id}}</td>
-                        <td class="p-3 text-center">{{course.name}}</td>
-                        <td class="p-3 text-center">{{course.duration}}</td>
-
-                        <td class="p-3">
-                            <a href="/admin/course/{{course.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
-                                <i class="material-icons-outlined text-base">edit</i>
-                            </a>
-                            <a href="/admin/deleteCourse/{{course.id}}" class="text-red-400 hover:text-red-500 ml-2">
-                                <i class="material-icons-round text-base">delete_outline</i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+{% include "table.html" with{'columns':columns,'tableItems':courses,'type':'course','delType':'deleteCourse'} %}
 {% endblock %}
