--- a/App/Views/Admin/Dashboard/Subject/index.html
+++ b/App/Views/Admin/Dashboard/Subject/index.html
@@ -1,10 +1,5 @@
 {% extends "base.html" %} {% block title %}Admin | Subject{% endblock %} {%
-block body %}
-<a href="/admin/newSubject">
-    <button
-        class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-        New
-    </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':subjects,'type':'subject','delType':'deleteSubject'} %}
-{% endblock %}
+block body %} {% set type = "subject"%} {% include "tableHeading.html" %} {%
+include "table.html"
+with{'headings':columns,'items':subjects,'columns':['id','name','subjectCode','department']}
+%} {% endblock %}
