--- a/App/Views/Student/Dashboard/Attendance/index.html
+++ b/App/Views/Student/Dashboard/Attendance/index.html
@@ -1,28 +1,1 @@
-{% extends "base.html" %} {% block title %}dashboard{% endblock %} {% block body
-%}
-<div class="flex m-5">
-  <div class="col-span-12">
-    <div class="overflow-auto lg:overflow-visible">
-      <table
-        class="table w-full text-gray-400 border-separate space-y-6 text-sm"
-      >
-        <thead class="bg-blue-900 text-white">
-          {% for heading in arrayOfHeadings %}
-          <th class="p-3 lg:w-4 text-left">{{heading}}</th>
-          {% endfor %}
-        </thead>
-        <tbody>
-          {% for obj in arrayOfObj|ft(sqn) %}
-          <tr class="bg-blue-100 lg:text-black">
-            {% for key, data in obj %}
-            <td class="p-3 text-center">{{data}}</td>
-            {% endfor %}
-            <td class="p-3 text-center">Edit{{obj.id}} /Delete</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-{% endblock %}
+{{data}}
