--- a/App/Views/table.html
+++ b/App/Views/table.html
@@ -1,62 +1,52 @@
-<div class="flex m-5">
-    <div class="col-span-12">
-        <div class="overflow-auto lg:overflow-visible">
-            <table class="table lg:h-full lg:w-screen text-gray-400 border-separate space-y-6 text-sm">
-                <thead class="bg-blue-900 text-white">
-                    <tr>
-                        {% for item in columns %}
-                        <th class="p-3 lg:w-4 text-left">{{item}}</th>
-                        {% endfor %}
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in tableItems %}
-                    <tr class="bg-blue-100 lg:text-black">
-                        {% if item.id %}
-                        <td class="p-3 font-medium capitalize lg:w-4">{{item.id}}</td>
-                        {% endif %}
-                        {% if item.name %}
-                        <td class="p-3 text-center">{{item.name}}</td>
-                        {% endif %}
-                        {% if item.code %}
-                        <td class="p-3 text-center">{{item.code}}</td>
-                        {% endif %}
-                        {% if item.branchCode %}
-                        <td class="p-3 text-center">{{item.branchCode}}</td>
-                        {% endif %}
-                        {% if item.teacher %}
-                        <td class="p-3 text-center">{{item.teacher}}</td>
-                        {% endif %}
-                        {% if item.duration %}
-                        <td class="p-3 text-center">{{item.duration}}</td>
-                        {% endif %}
-                        {% if item.hod %}
-                        <td class="p-3 text-center">{{item.hod}}</td>
-                        {% endif %}
-                        {% if item.fromTime and item.toTime %}
-                        <td class="p-3 text-center">{{item.fromTime}}-{{item.toTime}}</td>
-                        {% endif %}
-                        {% if item.subjectCode %}
-                        <td class="p-3 text-center">{{item.subjectCode}}</td>
-                        {% endif %}
-                        {% if item.subjectDepartment %}
-                        <td class="p-3 text-center">{{item.subjectDepartment}}</td>
-                        {% endif %}
-                        {% if item.teacherDepartment %}
-                        <td class="p-3 text-center">{{item.teacherDepartment}}</td>
-                        {% endif %}
-                        <td class="p-3">
-                            <a href="/admin/{{type}}/{{item.id}}" class="text-yellow-400 hover:text-yellow-500 mx-2">
-                                <i class="material-icons-outlined text-base">edit</i>
-                            </a>
-                            <a href="/admin/{{delType}}/{{item.id}}" class="text-red-400 hover:text-red-500 ml-2">
-                                <i class="material-icons-round text-base">delete_outline</i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+<div class="flex m-5 my-5">
+  <div class="col-span-12">
+    <div class="overflow-auto lg:overflow-visible">
+      <table
+        class="
+          table
+          lg:h-full lg-80vw
+          text-gray-400
+          border-separate
+          space-y-6
+          text-sm
+          border-collapse border-2 border-double border-blue-300
+        "
+      >
+        <thead class="bg-blue-900 text-white">
+          <tr>
+            {% for heading in headings %}
+            <th class="p-3 lg:w-4 text-center border border-solid border-white">
+              {{heading|ucf}}
+            </th>
+            {% endfor %}
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in items|ft(columns) %}
+          <tr class="bg-blue-100 lg:text-black">
+            {% for key, data in item %}
+            <td class="p-3 text-right border border-solid border-white">
+              {{data}}
+            </td>
+            {% endfor %}
+            <td class="p-3 text-right border border-solid border-white">
+              <a
+                href="/admin/{{type}}/{{item.id}}"
+                class="text-yellow-400 hover:text-yellow-500 mx-2"
+              >
+                <i class="material-icons-outlined text-base">edit</i>
+              </a>
+              <a
+                href="/admin/delete{{type|ucf}}/{{item.id}}"
+                class="text-red-400 hover:text-red-500 ml-2"
+              >
+                <i class="material-icons-round text-base">delete_outline</i>
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
