--- a/App/Views/Admin/Dashboard/Branch/index.html
+++ b/App/Views/Admin/Dashboard/Branch/index.html
@@ -1,10 +1,4 @@
 {% extends "base.html" %} {% block title %}Admin | Branch{% endblock %} {% block
-body %}
-<a href="/admin/newBranch">
-  <button
-    class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-    New
-  </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':branches,'type':'branch','delType':'deleteBranch'} %}
-{% endblock %}
+body %} {% set type = "branch"%} {% include "tableHeading.html" %} {% include
+"table.html" with{'headings':columns,'items':branches,'columns':['id', 'name',
+'code', 'department'],} %} {% endblock %}
