--- a/App/Views/Admin/Dashboard/Course/index.html
+++ b/App/Views/Admin/Dashboard/Course/index.html
@@ -1,10 +1,4 @@
-{% extends "base.html" %} {% block title %}Admin | course{% endblock %} {%
-block body %}
-<a href="/admin/newCourse">
-    <button
-        class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-        New
-    </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':courses,'type':'course','delType':'deleteCourse'} %}
-{% endblock %}
+{% extends "base.html" %} {% block title %}Admin | course{% endblock %} {% block
+body %} {% set type = "course"%} {% include "tableHeading.html" %} {% include
+"table.html" with{ 'headings':columns, 'items':courses,
+'columns':['id','name','duration'] } %} {% endblock %}
