--- a/App/Views/Admin/Dashboard/Department/index.html
+++ b/App/Views/Admin/Dashboard/Department/index.html
@@ -1,11 +1,4 @@
 {% extends "base.html" %} {% block title %}Admin | Department{% endblock %} {%
-block body %}
-<a href="/admin/newDepartment">
-  <button
-    class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-    New
-  </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':department,'type':'department','delType':'deleteDepartment'}
-%}
-{% endblock %}
+block body %} {% set type = "department" %} {% include "tableHeading.html" %} {%
+include "table.html" with{ 'headings':columns, 'items':departments, 'columns':
+['id','name','hod']} %} {% endblock %}
