--- a/App/Views/Admin/Dashboard/Period/index.html
+++ b/App/Views/Admin/Dashboard/Period/index.html
@@ -1,10 +1,5 @@
-{% extends "base.html" %} {% block title %}Admin | Period{% endblock %} {%
-block body %}
-<a href="/admin/newPeriod">
-    <button
-        class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-        New
-    </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':periods,'type':'period','delType':'deletePeriod'} %}
+{% extends "base.html" %} {% block title %}Admin | Period{% endblock %} {% block
+body %} {% set type = "period"%} {% include "tableHeading.html" %} {% include
+"table.html"
+with{'headings':columns,'items':periods,columns:['id','fromTime','toTime']} %}
 {% endblock %}
