--- a/App/Views/Admin/Dashboard/Teacher/index.html
+++ b/App/Views/Admin/Dashboard/Teacher/index.html
@@ -1,10 +1,4 @@
 {% extends "base.html" %} {% block title %}Admin | Teacher{% endblock %} {%
-block body %}
-<a href="/admin/newTeacher">
-  <button
-    class="bg-transparent hover:bg-blue-900 mx-5 my-2 text-blue-900 font-semibold hover:text-white py-2 px-4 border border-blue-900 hover:border-transparent rounded">
-    New
-  </button>
-</a>
-{% include "table.html" with{'columns':columns,'tableItems':teacher,'type':'teacher','delType':'deleteTeacher'} %}
-{% endblock %}
+block body %} {% set type="teacher" %} {% include "tableHeading.html" %} {%
+include "table.html" with{ 'headings':columns,
+'items':teachers,'columns':['id','name','teacherDepartment']} %} {% endblock %}
