--- a/App/Views/Admin/Dashboard/TimeTable/index.html
+++ b/App/Views/Admin/Dashboard/TimeTable/index.html
@@ -1,202 +1,238 @@
 {% extends "base.html" %} {% block title %}Admin | TimeTable{% endblock %} {%
 block body %}
-<form action="/admin/timetableForClass" onsubmit="return saveTimeTable()">
-  <h5>Class</h5>
-  <div class="input-field col s12">
-    <select
-      onchange="updateClass(this)"
-      name="class"
-      class="browser-default"
-      id="classId"
-    >
-      {% for class in classes %}
-      <option class="class-id" value="{{class.id}}">{{class.name}}</option>
-      {% endfor %}
-    </select>
-    <br />
-  </div>
+<div class="flex m-5 my-5">
+  <div class="col-span-12">
+    <div class="overflow-auto lg:overflow-visible">
+      <form action="/admin/timetableForClass" onsubmit="return saveTimeTable()">
+        <h5>Class</h5>
+        <div class="input-field col s12">
+          <select
+            onchange="updateClass(this)"
+            name="class"
+            class="browser-default"
+            id="classId"
+          >
+            {% for class in classes %}
+            <option class="class-id" value="{{class.id}}">
+              {{class.name}}
+            </option>
+            {% endfor %}
+          </select>
+          <br />
+        </div>
 
-  <div class="row col s12">
-    <div class="input-field col s6">
-      <h5>Subject</h5>
-      <select name="class" class="browser-default" id="subject">
-        {% for subject in subjects %}
-        <option value="{{subject.id}}" data-code="{{subject.subjectCode}}">
-          {{subject.name}}
-        </option>
-        {% endfor %}
-      </select>
-      <br />
-    </div>
-    <div class="input-field col s6">
-      <h5>Teacher</h5>
-      <select name="teacher" class="browser-default" id="teacher">
-        {% for teacher in teachers %}
-        <option value="{{teacher.id}}">{{teacher.name}}</option>
-        {% endfor %}
-      </select>
-      <br />
-    </div>
-  </div>
+        <div class="row col s12">
+          <div class="input-field col s6">
+            <h5>Subject</h5>
+            <select name="class" class="browser-default" id="subject">
+              {% for subject in subjects %}
+              <option
+                value="{{subject.id}}"
+                data-code="{{subject.subjectCode}}"
+              >
+                {{subject.name}}
+              </option>
+              {% endfor %}
+            </select>
+            <br />
+          </div>
+          <div class="input-field col s6">
+            <h5>Teacher</h5>
+            <select name="teacher" class="browser-default" id="teacher">
+              {% for teacher in teachers %}
+              <option value="{{teacher.id}}">{{teacher.name}}</option>
+              {% endfor %}
+            </select>
+            <br />
+          </div>
+        </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Day/Period</th>
-        {% for period in periods %}
-        <th data-value="{{period.id}}">
-          {{period.fromTime}}-{{period.toTime}}
-        </th>
-        {% endfor %}
-      </tr>
-    </thead>
-    <tbody>
-      {% for day in days %}
-      <tr data-value="{{day}}">
-        <td><b>{{day}}</b></td>
-        {% for period in periods %}
-        <td
-          onclick="changeId(this)"
-          class="tableData"
-          id="{{period.id}}-{{day}}"
+        <table
+          class="
+            table
+            lg:h-full lg-80vw
+            text-gray-400
+            border-separate
+            space-y-6
+            text-sm
+            border-collapse border-2 border-double border-blue-300
+          "
         >
-          NA
-        </td>
-        {% endfor %}
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  <button type="submit" class="btn btn-primary">Update TimeTable</button>
-</form>
-<a href="/admin">Back to Time table</a>
+          <thead class="bg-blue-900 text-white">
+            <tr>
+              <th
+                class="p-3 lg:w-4 text-center border border-solid border-white"
+              >
+                Day/Period
+              </th>
+              {% for period in periods %}
+              <th
+                class="p-3 lg:w-4 text-center border border-solid border-white"
+                data-value="{{period.id}}"
+              >
+                {{period.fromTime}}-{{period.toTime}}
+              </th>
+              {% endfor %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for day in days %}
+            <tr class="bg-blue-100 lg:text-black" data-value="{{day}}">
+              <td class="p-3 text-right border border-solid border-white">
+                <b>{{day|ucf}}</b>
+              </td>
+              {% for period in periods %}
+              <td
+                onclick="changeId(this)"
+                class="
+                  tableData
+                  p-3
+                  text-right
+                  border border-solid border-white
+                "
+                id="{{period.id}}-{{day}}"
+              >
+                NA
+              </td>
+              {% endfor %}
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <br />
+        {% include "button.html" with {text: "Update TimeTable", type:"submit"}
+        %}
+      </form>
 
-<script type="text/javascript">
-  const formData = {};
-  let data = {
-    classID: $("#classId").val(),
-    periodID: null,
-    day: null,
-    subjectID: null,
-    teacherID: null,
-  };
-  let dataCode = {
-    subject: null,
-    teacher: null,
-  };
-  activeTd = null;
-  function changeId(val) {
-    $("td").each(function () {
-      $(this).removeClass("selected");
-      data = {
-        classID: $("#classId").val(),
-        periodID: null,
-        day: null,
-        subjectID: null,
-        teacherID: null,
-      };
-      dataCode = {
-        subject: null,
-        teacher: null,
-      };
-    });
-    if (activeTd == val.id) {
-      $("#" + activeTd).removeClass("selected");
-      activeTd = null;
-    } else {
-      activeTd = val.id;
-      $("#" + activeTd).addClass("selected");
-      data.periodID = activeTd.split("-")[0];
-      data.day = activeTd.split("-")[1];
-    }
-  }
-  function updateClass(e) {
-    $(".tableData").each(function () {
-      $(this).html("N/A");
-    });
-    $.ajax({
-      url: "/admin/getTimetable/" + e.value,
-      method: "get",
-    })
-      .done((data) => {
-        data = JSON.parse(data);
-        data.forEach((_data) => {
-          let td = $("#" + _data.periodID + "-" + _data.day);
-          const _id = `${_data.periodID}-${_data.day}`;
-          formData[_id] = {
-            classID: _data.classID,
-            periodID: _data.periodID,
-            day: _data.day,
-            subjectID: _data.subjectID,
-            teacherID: _data.teacherID,
-          };
-          if (td.length) {
-            td.text(_data.subjectCode + "/" + _data.teacher);
+      <script type="text/javascript">
+        const formData = {};
+        let data = {
+          classID: $('#classId').val(),
+          periodID: null,
+          day: null,
+          subjectID: null,
+          teacherID: null,
+        };
+        let dataCode = {
+          subject: null,
+          teacher: null,
+        };
+        activeTd = null;
+        function changeId(val) {
+          $('td').each(function () {
+            $(this).removeClass('selected');
+            data = {
+              classID: $('#classId').val(),
+              periodID: null,
+              day: null,
+              subjectID: null,
+              teacherID: null,
+            };
+            dataCode = {
+              subject: null,
+              teacher: null,
+            };
+          });
+          if (activeTd == val.id) {
+            $('#' + activeTd).removeClass('selected');
+            activeTd = null;
+          } else {
+            activeTd = val.id;
+            $('#' + activeTd).addClass('selected');
+            data.periodID = activeTd.split('-')[0];
+            data.day = activeTd.split('-')[1];
           }
+        }
+        function updateClass(e) {
+          $('.tableData').each(function () {
+            $(this).html('N/A');
+          });
+          $.ajax({
+            url: '/admin/getTimetable/' + e.value,
+            method: 'get',
+          })
+            .done((data) => {
+              data = JSON.parse(data);
+              data.forEach((_data) => {
+                let td = $('#' + _data.periodID + '-' + _data.day);
+                const _id = `${_data.periodID}-${_data.day}`;
+                formData[_id] = {
+                  classID: _data.classID,
+                  periodID: _data.periodID,
+                  day: _data.day,
+                  subjectID: _data.subjectID,
+                  teacherID: _data.teacherID,
+                };
+                if (td.length) {
+                  td.text(_data.subjectCode + '/' + _data.teacher);
+                }
+              });
+            })
+            .fail(console.log);
+        }
+        $(function () {
+          $.ajax({
+            url: '/admin/getTimetable/' + $('#classId').val(),
+            method: 'get',
+          })
+            .done((data) => {
+              data = JSON.parse(data);
+              data.forEach((_data) => {
+                let td = $('#' + _data.periodID + '-' + _data.day);
+                const _id = `${_data.periodID}-${_data.day}`;
+                formData[_id] = {
+                  classID: _data.classID,
+                  periodID: _data.periodID,
+                  day: _data.day,
+                  subjectID: _data.subjectID,
+                  teacherID: _data.teacherID,
+                };
+                if (td.length) {
+                  td.text(_data.subjectCode + '/' + _data.teacher);
+                }
+              });
+            })
+            .fail(console.log);
+          $('#teacher').on('change', function () {
+            dataCode.teacher = this.options[this.selectedIndex].text;
+            $('#' + activeTd).html(dataCode.subject + '/' + dataCode.teacher);
+            data.teacherID = this.value;
+            const _id = `${data.periodID}-${data.day}`;
+            formData[_id] = data;
+          });
+          $('#subject').on('change', function () {
+            dataCode.subject =
+              this.options[this.selectedIndex].getAttribute('data-code');
+            $('#' + activeTd).html(dataCode.subject + '/' + dataCode.teacher);
+            data.subjectID = this.value;
+            const _id = `${data.periodID}-${data.day}`;
+            formData[_id] = data;
+          });
+          console.log('read');
         });
-      })
-      .fail(console.log);
-  }
-  $(function () {
-    $.ajax({
-      url: "/admin/getTimetable/" + $("#classId").val(),
-      method: "get",
-    })
-      .done((data) => {
-        data = JSON.parse(data);
-        data.forEach((_data) => {
-          let td = $("#" + _data.periodID + "-" + _data.day);
-          const _id = `${_data.periodID}-${_data.day}`;
-          formData[_id] = {
-            classID: _data.classID,
-            periodID: _data.periodID,
-            day: _data.day,
-            subjectID: _data.subjectID,
-            teacherID: _data.teacherID,
-          };
-          if (td.length) {
-            td.text(_data.subjectCode + "/" + _data.teacher);
-          }
-        });
-      })
-      .fail(console.log);
-    $("#teacher").on("change", function () {
-      dataCode.teacher = this.options[this.selectedIndex].text;
-      $("#" + activeTd).html(dataCode.subject + "/" + dataCode.teacher);
-      data.teacherID = this.value;
-      const _id = `${data.periodID}-${data.day}`;
-      formData[_id] = data;
-    });
-    $("#subject").on("change", function () {
-      dataCode.subject =
-        this.options[this.selectedIndex].getAttribute("data-code");
-      $("#" + activeTd).html(dataCode.subject + "/" + dataCode.teacher);
-      data.subjectID = this.value;
-      const _id = `${data.periodID}-${data.day}`;
-      formData[_id] = data;
-    });
-    console.log("read");
-  });
-  function saveTimeTable() {
-    console.log(formData);
-    $.ajax({
-      url: "/admin/setTimetable",
-      method: "post",
-      data: {
-        classID: $("#classId").val(),
-        data: Object.values(formData),
-      },
-    })
-      .done(() => {
-        Toastify({
-          text: "Time-Table Updated",
-          style: {
-            background: "linear-gradient(to right, #00b09b, #96c93d)",
-          },
-        }).showToast();
-      })
-      .fail(console.log);
-    return false;
-  }
-</script>
+        function saveTimeTable() {
+          console.log(formData);
+          $.ajax({
+            url: '/admin/setTimetable',
+            method: 'post',
+            data: {
+              classID: $('#classId').val(),
+              data: Object.values(formData),
+            },
+          })
+            .done(() => {
+              Toastify({
+                text: 'Time-Table Updated',
+                style: {
+                  background: 'linear-gradient(to right, #00b09b, #96c93d)',
+                },
+              }).showToast();
+            })
+            .fail(console.log);
+          return false;
+        }
+      </script>
+    </div>
+  </div>
+</div>
 {% endblock %}
