--- a/public/media/styles/style.css
+++ b/public/media/styles/style.css
@@ -5,3 +5,9 @@ body {
   border: 2px solid #f0f0f1;
   background: #dedede;
 }
+
+@media only screen and (min-width: 1024px) {
+  .lg-80vw {
+    width: 80vw;
+  }
+}
