--- a/App/Views/Admin/Dashboard/Course/index.html
+++ b/App/Views/Admin/Dashboard/Course/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %} {% block title %}Admin | course{% endblock %} {% block
-body %} {% set type = "course"%} {% include "tableHeading.html" %} {% include
-"table.html" with{ 'headings':columns, 'items':courses,
-'columns':['id','name','duration'] } %} {% endblock %}
+body %} {% include "tableHeading.html" %} {% include "table.html" with{
+'headings':columns, 'items':courses, 'columns':['id','name','duration'] } %} {%
+endblock %}
