--- a/App/Views/Admin/Dashboard/Student/index.html
+++ b/App/Views/Admin/Dashboard/Student/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}Admin | Student{% endblock %} {%
-block body %} {% set type="student" %} {% include "tableHeading.html" %} {%
-include "table.html" with{ 'headings':columns,
-'items':students,'columns':['id','name']} %} {% endblock %}
+block body %} {% include "tableHeading.html" %} {% include "table.html" with{
+'headings':columns,
+'items':students,'columns':['id','rollNum','name','mobile','email','batchCode','courseName','branch','semester']}
+%} {% endblock %}
