--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -41,7 +41,7 @@
     {%endif%}
   </nav>
   <div class="min-h-screen flex flex-row bg-gray-100">
-    {% include 'menu.html' with {'islogin':islogin,'listItems':listItems}%}
+    {% include 'menu.html' with {'islogin':islogin,'listItems':listItems,'type':type}%}
     <div class="container">{% block body %} {% endblock %}</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script type="text/javascript">
