--- a/App/Views/menu.html
+++ b/App/Views/menu.html
@@ -1,16 +1,49 @@
 {% if islogin %}
 <div class="flex flex-col w-80 sm:w-56 bg-white rounded-r-3xl overflow-hidden">
-    <ul class="flex flex-col py-4">
-        {% for item in listItems %}
-        <li>
-            <a href="{{item.url}}"
-                class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                        class="{{item.icon}}"></i></span>
-                <span class="text-sm font-medium">{{item.name}}</span>
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
+  <ul class="flex flex-col py-4">
+    {% for item in listItems %}
+    <li class="{% if type == item.code %}selected{% endif %}">
+      <a
+        href="{{item.url}}"
+        class="
+          flex flex-row
+          items-center
+          h-12
+          transform
+          hover:translate-x-2
+          transition-transform
+          ease-in
+          duration-200
+          text-gray-500
+          hover:text-gray-800
+          {%
+          if
+          type
+          ==
+          item.code
+          %}
+          translate-x-2
+          text-gray-800
+          {%
+          endif
+          %}
+        "
+      >
+        <span
+          class="
+            inline-flex
+            items-center
+            justify-center
+            h-12
+            w-12
+            text-lg text-gray-400
+          "
+          ><i class="{{item.icon}}"></i
+        ></span>
+        <span class="text-sm font-medium">{{item.name}}</span>
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
 </div>
 {% endif %}
