--- a/App/Views/Teacher/Dashboard/TimeTable/TimeTable.html
+++ b/App/Views/Teacher/Dashboard/TimeTable/TimeTable.html
@@ -1,23 +1,33 @@
 {% extends "base.html" %}
 {% block title %}TimeTable{% endblock %}
 {% block body %}
-
+<div class="flex m-5 my-5">
+  <div class="col-span-12">
+    <div class="overflow-auto lg:overflow-visible">
 <h3>Time Table</h3>
-<table>
-  <thead>
+<table class="
+table
+lg:h-full lg-80vw
+text-gray-400
+border-separate
+space-y-6
+text-sm
+border-collapse border-2 border-double border-blue-300
+">
+  <thead class="bg-blue-900 text-white">
     <tr>
-      <th>Day/Period</th>
+      <th  class="p-3 lg:w-4 text-center border border-solid border-white">Day/Period</th>
       {% for period in periods %}
-      <th data-value="{{period.id}}">{{period.fromTime}}-{{period.toTime}}</th>
+      <th  class="p-3 lg:w-4 text-center border border-solid border-white" data-value="{{period.id}}">{{period.fromTime}}-{{period.toTime}}</th>
       {% endfor %}
     </tr>
   </thead>
   <tbody>
     {% for day in days %}
-    <tr data-value="{{day}}">
-      <td><b>{{day|ucf}}</b></td>
+    <tr class="bg-blue-100 lg:text-black" data-value="{{day}}">
+      <td class="p-3 text-right border border-solid border-white"><b>{{day|ucf}}</b></td>
       {% for period in periods %}
-      <td class="tableData" id="{{period.id}}-{{day}}">NA</td>
+      <td  class="p-3 text-right border border-solid border-white tableData" id="{{period.id}}-{{day}}">NA</td>
       {% endfor %}
     </tr>
     {% endfor %}
